# opengl-template

./: .gitignore  .gitmodules  README.md  YOLO.sh  build.sh  main.cpp
scripts/: build.sh  clean.sh  configure.sh  copyshaders.sh  run.sh
src/: CMakeLists.txt  main.cpp  shaders.cpp  shaders.h
src/shaders/: defaultshader.frag
